--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
 <body>
 
-    <!-- PRE LOADER -->
+    <!-- PRE LOADER
     <section class="preloader">
         <img src="images/loader.gif" id="loader">
-    </section>
+    </section> -->
 
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
@@ -588,12 +588,10 @@
                                         </blockquote>
                                     </div>
                                     <div class="active item">
-                                        <img class="profile-circle" src="images/profile.png">
+                                        <img class="profile-circle" src="images/testi/samson.jpg">
                                         <blockquote>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
-                                                veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>John Doe - NIGERIA</h3>
+                                            <p>Bolaji is a dated developer, always eager to find and fix problems. <br /> He is one of the most active contributors to Open Source Community Africa, a project that promotes the use of open source project in Africa. <br /> I find it easy working with him and I will highly recommend him on his expertise. </p>
+                                            <h3>Samson Goddy | Co-Founder <a href="https://oscafrica.org" target="_blank">OSCA</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
