--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="quote"><i class="fa fa-quote-left fa-4x"></i></div>
-                            <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="3000">
+                            <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="11000">
                                 <!-- Carousel indicators -->
                                 <ol class="carousel-indicators">
                                     <li data-target="#fade-quote-carousel" data-slide-to="0"></li>
@@ -569,56 +569,56 @@
                                 <!-- Carousel items -->
                                 <div class="carousel-inner">
                                     <div class="item">
-                                        <img class="profile-circle" src="images/profile.png">
+                                        <img class="profile-circle" src="images/testi/seun.jpg">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>John Doe - NIGERIA</h3>
+                                            <h3>Seun Daramola | <span class="testi">Software Developer</span> <a href="https://andela.com" target="_blank">@Andela</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/profile.png">
+                                        <img class="profile-circle" src="images/testi/johnicks.jpg">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>John Doe - NIGERIA</h3>
+                                                <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla" target="_blank">@Johnicks StudioVilla</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
                                         <img class="profile-circle" src="images/testi/samson.jpg">
                                         <blockquote>
-                                            <p>Bolaji is a dated developer, always eager to find and fix problems. <br /> He is one of the most active contributors to Open Source Community Africa, a project that promotes the use of open source project in Africa. <br /> I find it easy working with him and I will highly recommend him on his expertise. </p>
-                                            <h3>Samson Goddy | Co-Founder <a href="https://oscafrica.org" target="_blank">OSCA</a></h3>
+                                            <p>Bolaji is a dedicated developer, always eager to find and fix problems. <br /> He is one of the most active contributors to Open Source Community Africa, a project that promotes the use of open source project in Africa. <br /> I find it easy working with him and I will highly recommend him on his expertise. </p>
+                                            <h3>Samson Goddy | <span class="testi">Co-Founder</span> <a href="https://oscafrica.org" target="_blank">@OSCA</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/profile.png">
+                                        <img class="profile-circle" src="images/testi/lekan.jpg">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>John Doe - NIGERIA</h3>
+                                            <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a href="https://dotimely.com" target="_blank">@DoTimely</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/profile.png">
+                                        <img class="profile-circle" src="images/testi/damian.jpg">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>John Doe - NIGERIA</h3>
+                                                <h3>Damian Ashinjo | <span class="testi">CEO</span> <a href="https://youthsundefined.org" target="_blank">@YouthsUndefined</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/profile.png">
+                                        <img class="profile-circle" src="images/testi/sharon.jpg">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>John Doe - NIGERIA</h3>
+                                                <h3>Sharon Ngunan | <span class="testi">CEO</span> <a href="https://www.facebook.com/Fairy-Dust-Studio-1980424062254614/" target="_blank">@FairyDust Studio</a></h3>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -754,8 +754,7 @@
                         <p><i class="fa fa-phone"></i> [+234] 8109445504</p>
                         <p><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</p>
                         <p><i class="fa fa-envelope"></i> sirbeejay1@gmail.com</p>
-                        <p><i class="fa fa-map-marker"></i> FULOKOJA, Lokoja, Kogi State,
-                            Nigeria.</p>
+                        <p><i class="fa fa-map-marker"></i> Lokoja, Kogi State, Nigeria.</p>
                         <p><i class="fa fa-paper-plane"></i> Use the chat bot <i class="fa fa-arrow-right"></i></p>
                     </div>
                 </div>
