--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
 <body>
 
-    <!-- PRE LOADER
+    <!-- PRE LOADER -->
     <section class="preloader">
         <img src="images/loader.gif" id="loader">
-    </section> -->
+    </section>
 
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
@@ -575,7 +575,8 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Seun Daramola | <span class="testi">Software Developer</span> <a href="https://andela.com" target="_blank">@Andela</a></h3>
+                                            <h3>Seun Daramola | <span class="testi">Software Developer</span> <a href="https://andela.com"
+                                                    target="_blank">@Andela</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -584,14 +585,20 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                                <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla" target="_blank">@Johnicks StudioVilla</a></h3>
+                                            <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla"
+                                                    target="_blank">@Johnicks StudioVilla</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
                                         <img class="profile-circle" src="images/testi/samson.jpg">
                                         <blockquote>
-                                            <p>Bolaji is a dedicated developer, always eager to find and fix problems. <br /> He is one of the most active contributors to Open Source Community Africa, a project that promotes the use of open source project in Africa. <br /> I find it easy working with him and I will highly recommend him on his expertise. </p>
-                                            <h3>Samson Goddy | <span class="testi">Co-Founder</span> <a href="https://oscafrica.org" target="_blank">@OSCA</a></h3>
+                                            <p>Bolaji is a dedicated developer, always eager to find and fix problems.
+                                                <br /> He is one of the most active contributors to Open Source
+                                                Community Africa, a project that promotes the use of open source
+                                                project in Africa. <br /> I find it easy working with him and I will
+                                                highly recommend him on his expertise. </p>
+                                            <h3>Samson Goddy | <span class="testi">Co-Founder</span> <a href="https://oscafrica.org"
+                                                    target="_blank">@OSCA</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -600,7 +607,8 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a href="https://dotimely.com" target="_blank">@DoTimely</a></h3>
+                                            <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a
+                                                    href="https://dotimely.com" target="_blank">@DoTimely</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -609,7 +617,8 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                                <h3>Damian Ashinjo | <span class="testi">CEO</span> <a href="https://youthsundefined.org" target="_blank">@YouthsUndefined</a></h3>
+                                            <h3>Damian Ashinjo | <span class="testi">CEO</span> <a href="https://youthsundefined.org"
+                                                    target="_blank">@YouthsUndefined</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -618,7 +627,8 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                                <h3>Sharon Ngunan | <span class="testi">CEO</span> <a href="https://www.facebook.com/Fairy-Dust-Studio-1980424062254614/" target="_blank">@FairyDust Studio</a></h3>
+                                            <h3>Sharon Ngunan | <span class="testi">CEO</span> <a href="https://www.facebook.com/Fairy-Dust-Studio-1980424062254614/"
+                                                    target="_blank">@FairyDust Studio</a></h3>
                                         </blockquote>
                                     </div>
                                 </div>
