--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Twitter Card-->
     <meta name="twitter:title" content="BOLAJI AYODEJI 🔥🚀 | Portfolio">
-    <meta name="twitter:site" content="@iambolajiayodeji" />
-    <meta name="twitter:creator" content="@iambolajiayodeji" />
+    <meta name="twitter:site" content="@iambolajiayo" />
+    <meta name="twitter:creator" content="@iambolajiayo" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
     <meta name="twitter:image" content="images/my-picture.jpg">
     <meta name="twitter:card" content="images/my-picture.jpg">
