--- a/index.html
+++ b/index.html
@@ -604,7 +604,11 @@
                                     <div class="item">
                                         <img class="profile-circle" src="images/testi/lekan.jpg">
                                         <blockquote>
-                                            <p>I've known Bolaji for some years now, He's not only concerned about building the technical aspect of your product, but also helping you scale up your business, this is some great quality most developers out there lack. You should try him out, He's good with trade!</p>
+                                            <p>I've known Bolaji for some years now, He's not only concerned about
+                                                building the technical aspect of your product, but also helping you
+                                                scale up your business, this is some great quality most developers out
+                                                there lack. You should try him out, He's an exponent Front-end
+                                                Developer</p>
                                             <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a
                                                     href="https://dotimely.com" target="_blank">@DoTimely</a></h3>
                                         </blockquote>
