--- a/index.html
+++ b/index.html
@@ -17,30 +17,42 @@
     </script>
 
 
-    <title>BOLAJI AYODEJI 🔥🚀 | Portfolio</title>
+    <title>⚡️️ BOLAJI AYODEJI ⚡️️</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Twitter Card-->
-    <meta name="twitter:title" content="BOLAJI AYODEJI 🔥🚀 | Portfolio">
+    <meta name="twitter:title" content="⚡️️BOLAJI AYODEJI⚡️️">
     <meta name="twitter:site" content="@iambolajiayo" />
     <meta name="twitter:creator" content="@iambolajiayo" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
-    <meta name="twitter:image" content="images/my-picture.jpg">
-    <meta name="twitter:card" content="images/my-picture.jpg">
+    <meta name="twitter:image" content="images/bolaji.jpg">
+    <meta name="twitter:card" content="images/bolaji.jpg">
     <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
+    <meta name="keywords" content="Bolaji Ayodeji, Bolaji, Ayodeji, Front-end Developer, Freelancer, Web Developer, Web Designer, Software Developer, Nigerian, Developer, GitHub, OpenSource" />
     <!-- Facebook card -->
     <meta property="fb:admins" content="100018476377896" />
     <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
-    <meta property="og:image" content="images/my-picture.jpg">
-    <meta property="og:title" content="BOLAJI AYODEJI 🔥🚀 | Portfolio" />
+    <meta property="og:image" content="images/bolaji.jpg">
+    <meta property="og:title" content="⚡️️BOLAJI AYODEJI⚡️️" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="BOLAJI AYODEJI">
     <meta property="og:url" content="https://bolajiayodeji.github.io" />
-    <meta property="og:site_name" content="BOLAJI AYODEJI 🔥🚀 | Portfolio" />
+    <meta property="og:site_name" content="⚡️️BOLAJI AYODEJI⚡️️" />
     <meta property="og:type" content="Portfolio Website" />
+
+    <!-- Add to home screen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="⚡️️BOLAJI AYODEJI⚡️️" />
+    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png" />
+    <!-- Windows -->
+    <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png" />
+    <meta name="msapplication-TileColor" content="#2dce89" />
+
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Google Knowledge Graph card -->
     <script type='application/ld+json'>
@@ -49,7 +61,7 @@
             "@type": "Software Developer",
             "name": "BOLAJI AYODEJI (@iambolajiayo)",
             "url": "https://bolajiayodeji.github.io",
-            "logo": "https://bolajiayodeji.github.io/images/my-picture.jpg",
+            "logo": "https://bolajiayodeji.github.io/images/bolaji.jpg",
             "description": "I build and deploy software applications with great focus on stunning interface design, optimization and security."
         }
     </script>
@@ -107,13 +119,13 @@
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="#home" class="smoothScroll"><i class="ni ni-building"></i> Home</a></li>
                     <li><a href="#about" class="smoothScroll"><i class="ni ni-circle-08"></i> About Me</a></li>
-                    <li><a href="#service" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
+                    <li><a href="#services" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="ni ni-collection"></i> Portfolio</a></li>
                     <li><a href="#contact" class="smoothScroll"><i class="ni ni-satisfied"></i> Hire Me</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="section-btn hvr-bounce-out"><a href="resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
+                    <li class="section-btn hvr-bounce-out"><a href="assets/resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
                 </ul>
             </div>
 
@@ -180,7 +192,7 @@
                             optimization and security. 💡</p>
                         <p>I'm passionate about developing and designing brilliant innovative products. 💡</p><br />
 
-                        <a class="section-btn hvr-icon-forward " href="resume.pdf ">View Resume <i class="fa fa-arrow-right hvr-icon "></i></a>
+                        <a class="section-btn hvr-icon-forward " href="assets/resume.pdf ">View Resume <i class="fa fa-arrow-right hvr-icon "></i></a>
 
 
                     </div>
@@ -222,7 +234,7 @@
 
                 <div class="col-md-4 col-sm-12 ">
                     <div>
-                        <img src="images/bolaji.svg " class="img-responsive center about-image " alt="Bolaji Ayodeji ">
+                        <img src="images/bolaji.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
@@ -233,7 +245,7 @@
 
 
     <!-- SERVICES -->
-    <section id="service " data-stellar-background-ratio="0.5 ">
+    <section id="services" data-stellar-background-ratio="0.5 ">
         <div class="container ">
             <div class="row ">
 
@@ -350,14 +362,14 @@
     <div class="col-md-12 ">
         <div class="container ">
             <h3 style="text-align: center; "> 100% Satisfaction Guaranteed <i class="ni ni-satisfied "></i></h3> <br />
-            <p> We don't bother you with up front deposits or lengthy contracts. If you're not happy with the project
+            <p> I don't bother you with up front deposits or lengthy contracts. If you're not happy with the project
                 when all is said and done, we will work until you're happy.</p>
         </div>
     </div>
 
 
     <!--BLOG SECTION-->
-    <section id="articles " data-stellar-background-ratio="0.5 ">
+    <section id="articles" data-stellar-background-ratio="0.5 ">
         <div class="container ">
             <div class="row ">
 
@@ -454,7 +466,7 @@
     </section>
 
     <!-- WORK -->
-    <section id="portfolio " data-stellar-background-ratio="0.5 ">
+    <section id="portfolio" data-stellar-background-ratio="0.5 ">
         <div class="container ">
             <div class="row ">
 
@@ -465,6 +477,20 @@
                         <br /><br /><br />
                         <h2>Recent Projects</h2>
                         <span class="line-bar ">...</span>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                        <a href="https://chrome.google.com/webstore/detail/inspirenuggets-for-chrome/acnfgdioohhajabdofaadfdhmlkphmlb" target="_blank" class="">
+                            <img src="images/work/work-image4.png" class="img-responsive" alt="Work">
+
+                            <div class="work-info">
+                                <h3>inspireNuggets</h3>
+                                <small>inspireNuggets is a Chrome Browser (Web) Extension that displays random inspiring techie quotes for developers/designers.</small>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
@@ -506,20 +532,6 @@
                             <div class="work-info">
                                 <h3>InsideFUL</h3>
                                 <small>Lifestyle Blog</small>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                        <a href="https://icafulokoja.github.io" target="_blank" class="">
-                            <img src="images/work/work-image4.jpg" class="img-responsive" alt="Work">
-
-                            <div class="work-info">
-                                <h3>ICA FULOKOJA</h3>
-                                <small>Ingressive Campus Community FULOKOJA Website.</small>
                             </div>
                         </a>
                     </div>
@@ -758,7 +770,7 @@
                             <li><a href="#articles" class="smoothScroll">Recent Articles</a></li>
                             <li><a href="#portfolio" class="smoothScroll">Recent Projects</a></li>
                             <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                            <li><a href="#" class="smoothScroll">Blog</a></li>
+                            <li><a href="https://medium.com/bolajiayodeji" class="smoothScroll">Blog</a></li>
                         </ul>
                     </div>
                 </div>
