--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <div class="container ">
             <h3 style="text-align: center; "> 100% Satisfaction Guaranteed <i class="ni ni-satisfied "></i></h3> <br />
             <p> I don't bother you with up front deposits or lengthy contracts. If you're not happy with the project
-                when all is said and done, we will work until you're happy.</p>
+                when all is said and done, I will work until you're happy.</p>
         </div>
     </div>
 
@@ -404,11 +404,11 @@
                     <div class="media blog-thumb ">
                         <div class="media-body blog-info ">
                             <small><i class="fa fa-clock-o "></i> Nov 8, 2018</small>
-                            <h3><a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/ "
+                            <h3><a href="https://medium.com/coderlist/introductio-e521ad99ff89"
                                     target="_blank ">How
                                     to build Progressive Web Apps and deploy to Firebase and GitHub Pages.</a></h3>
                             <p>In this Codelab, we are going to convert a basic static site into a Progressive Web App</p>
-                            <a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/ "
+                            <a href="https://medium.com/coderlist/introductio-e521ad99ff89"
                                 target="_blank " class="btn section-btn hvr-float ">Read article</a>
                         </div>
                     </div>
