--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Google Knowledge Graph card -->
     <script type='application/ld+json'>
         {
-            "@context": "http://www.schema.org",
+            "@context": "https://www.schema.org",
             "@type": "Software Developer",
             "name": "BOLAJI AYODEJI (@iambolajiayo)",
             "url": "https://bolajiayodeji.github.io",
