--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </a>
                     </h1>
 
-                    <a href="#about" class="btn section-btn smoothScroll hvr-icon-down">Get Started <i class="fa fa-chevron-circle-down hvr-icon"></i></a>
+                    <a href="#about" style="color:#000"; class="btn section-btn smoothScroll hvr-icon-down">Get Started <i class="fa fa-chevron-circle-down hvr-icon"></i></a>
                     <span>
                         CALL: +234 8109445504
                         <small>For any inquiry or questions.</small>
