--- a/index.html
+++ b/index.html
@@ -696,6 +696,9 @@
                         <div class="row">
                             <br /><br /><br /><br />
                             <ul>
+                                    <li style="display: inline-block; list-style: none; margin-right: 30px;">
+                                            <a href="tel:08109445504" class="fa fa-phone fa-3x"></a>
+                                        </li>
                                 <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="mailto:mailtobolaji@gmail.com" class="fa fa-envelope fa-3x"></a>
                                 </li>
