--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <meta name="msapplication-TileColor" content="#2dce89" />
 
     <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#2dce89"/>
 
     <!-- Google Knowledge Graph card -->
     <script type='application/ld+json'>
@@ -451,10 +452,8 @@
                 <div class="container ">
                     <div class="row ">
                         <div style="text-align: center; " class="col-lg-12 ">
-                            <h2> <i class="fa fa-arrow-right "></i> Read all my articles <i class="fa fa-arrow-left "></i></h2>
                             <h2>
-                                <a href="https://medium.com/@bolajiayodeji " class="link-btn hvr-float "> Click Here <i
-                                        class="fa fa-medium "></i></a>
+                                <a href="https://medium.com/@bolajiayodeji " class="link-btn hvr-float "> Read all my articles&nbsp; <i class="fa fa-arrow-right "></i></a>
                             </h2>
                         </div>
                     </div>
@@ -538,12 +537,10 @@
                 </div>
                 <div class="container">
                     <div class "row">
-                        <div style="text-align: center;" class="col-lg-12">
-                            <h2> <i class="fa fa-arrow-right"></i>View my other projects on github <i class="fa fa-arrow-left"></i>
+                        <div style="text-align: center;" class="col-lg-12"> 
                             </h2>
                             <h2>
-                                <a href="https://github.com/BolajiAyodeji?tab=repositories" class="link-btn hvr-float">Click
-                                    Here&nbsp; <i class="fa fa-github"></i></a>
+                                <a href="https://github.com/BolajiAyodeji?tab=repositories" class="link-btn hvr-float">View my other projects on GitHub&nbsp; <i class="fa fa-arrow-right"></i></a>
                             </h2>
                         </div>
                     </div>
