--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                 <!-- Carousel items -->
                                 <div class="carousel-inner">
                                     <div class="item">
-                                        <img class="profile-circle" src="images/testi/seun.jpg">
+                                        <img class="profile-circle" src="images/testi/seun.jpg" alt="Seun">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi
                                                 accusamus.
@@ -587,14 +587,14 @@
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/testi/johnicks.jpg">
+                                        <img class="profile-circle" src="images/testi/johnicks.jpg" alt="Johnicks">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla" target="_blank">@Johnicks StudioVilla</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
-                                        <img class="profile-circle" src="images/testi/samson.jpg">
+                                        <img class="profile-circle" src="images/testi/samson.jpg" alt="Samson">
                                         <blockquote>
                                             <p>Bolaji is a dedicated developer, always eager to find and fix problems.
                                                 <br /> He is one of the most active contributors to Open Source Community Africa, a project that promotes the use of open source project in Africa. <br /> I find it easy working with him and I will highly
@@ -603,7 +603,7 @@
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/testi/lekan.jpg">
+                                        <img class="profile-circle" src="images/testi/lekan.jpg" alt="Lekan">
                                         <blockquote>
                                             <p>I've known Bolaji for some years now, He's not only concerned about building the technical aspect of your product, but also helping you scale up your business, this is some great quality most developers out
                                                 there lack. You should try him out, He's an exponent Front-end Developer
@@ -612,14 +612,14 @@
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/testi/damian.jpg">
+                                        <img class="profile-circle" src="images/testi/damian.jpg" alt="Damian">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>Damian Ashinjo | <span class="testi">CEO</span> <a href="https://youthsundefined.org" target="_blank">@YouthsUndefined</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
-                                        <img class="profile-circle" src="images/testi/sharon.jpg">
+                                        <img class="profile-circle" src="images/testi/sharon.jpg" alt="Sharon">
                                         <blockquote>
                                             <p>Bolaji is a determined young man and I completely trust his expertise on building software's, developing and designing brilliant innovations. <br /> He responds quickly to problems and prefers long lasting solutions.</p>
                                             <h3>Sharon Ngunan | <span class="testi">CEO</span> <a href="https://www.facebook.com/Fairy-Dust-Studio-1980424062254614/" target="_blank">@FairyDust Studio</a></h3>
@@ -682,7 +682,7 @@
 
                 <div class="col-md-4 col-sm-4">
                     <div class="google-map">
-                        <img class="img-responsive" src="images/fav.png">
+                        <img class="img-responsive" src="images/fav.png" alt="Bolaji Svg">
                     </div>
                 </div>
 
